alterando os metodos toList() para collect(Collectors.toList())