@@ -2,6 +2,7 @@ package com.felipekonig.cursomc.resources;
 
 import java.net.URI;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import javax.validation.Valid;
 
@@ -67,7 +68,7 @@ public class ClienteResource {
 	public ResponseEntity<List<ClienteDTO>> findAll() {
 
 		List<Cliente> list = service.findAll();
-		List<ClienteDTO> listDTO = list.stream().map(obj -> new ClienteDTO(obj)).toList();
+		List<ClienteDTO> listDTO = list.stream().map(obj -> new ClienteDTO(obj)).collect(Collectors.toList());
 
 		return ResponseEntity.ok().body(listDTO);
 	}
