@@ -4,6 +4,7 @@ import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class URL {
 	
@@ -17,6 +18,6 @@ public class URL {
 
 	public static List<Integer> decodeIntList(String s) {
 
-		return Arrays.asList(s.split(",")).stream().map(x -> Integer.parseInt(x)).toList();
+		return Arrays.asList(s.split(",")).stream().map(x -> Integer.parseInt(x)).collect(Collectors.toList());
 	}
 }
